# aipolicyatlas

./: .gitignore  package-lock.json  package.json
.github/workflows/: README.md  crawl-discover.yml  crawl-update.yml
aipolicyatlas/: .env.example  package.json  postcss.config.mjs
aipolicyatlas/app/: layout.tsx  page.tsx
aipolicyatlas/components/: clear-filters-button.tsx  copy-button.tsx  copy-url-button.tsx  policy-card.tsx  search-bar-url.tsx  search-filters.tsx  sidebar.tsx  sort-buttons-top.tsx  sort-buttons.tsx
aipolicyatlas/lib/: api-client.example.ts  api-client.ts  api-config.ts  api-types.ts  meta-api.ts  policy-api.ts
app/: globals.css  page.tsx
backend/: .env.example  CELERY_GUIDE.md  FIX_TOKEN.md  GITHUB_TOKEN_SETUP.md  README.md  TEST_CRAWLER.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  legacy_crawler.py.bak  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 37206bd0c472_add_last_crawled_at_to_repositories.py  6beac6120842_initial_migration_create_repositories_.py
backend/api/: index.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  crawl.py  policies.py
backend/app/services/: github_crawler.py
backend/app/tasks/: __init__.py  crawl_tasks.py
backend/scripts/: start_celery_all.sh  start_celery_beat.sh  start_celery_worker.sh  test_celery.sh
components/: search-bar.tsx  sidebar.tsx  vote-button.tsx
lib/: demo-community.ts  demo-data.ts
types/: policy.ts
(+7 files in other folders)
